fix auto-suggest alignment issue

--- a/src/modules/home/order_modal/order-modal.css
+++ b/src/modules/home/order_modal/order-modal.css
@@ -2,14 +2,11 @@
     float: right;
 }
 
-
 .react-autosuggest__container {
     position: relative;
 }
 
 .react-autosuggest__input {
-    width: 240px;
-    height: 30px;
     padding: 10px 20px;
     font-family: Helvetica, sans-serif;
     font-weight: 300;
@@ -34,8 +31,6 @@
 .react-autosuggest__suggestions-container--open {
     display: block;
     position: absolute;
-    top: 51px;
-    width: 280px;
     border: 1px solid #aaa;
     background-color: #fff;
     font-family: Helvetica, sans-serif;
@@ -43,7 +38,7 @@
     font-size: 16px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    z-index: 9999999999999;
+    z-index: 2;
 }
 
 .react-autosuggest__suggestions-list {
